--- a/Sensor-App/View/de.lproj/Localizable.strings
+++ b/Sensor-App/View/de.lproj/Localizable.strings
@@ -46,4 +46,9 @@
 "A:" = "H:";
 
 
+// MARK: - Settings
+"Successfully saved!" = "Änderungen gespeichert!";
+"Changes discarded!" = "Änderungen verworfen!";
+
+
 
