--- a/Sensor-App/View/de.lproj/Localizable.strings
+++ b/Sensor-App/View/de.lproj/Localizable.strings
@@ -15,6 +15,12 @@
 "Speed:" = "Geschwindigkeit";
 
 
+"Location update started!" = "Standort updates gestarted!";
+"Location update stopped!" = "Standort updates gestoppt!";
+
+
+
+
 // MARK: - AccelerometerViewController.swift
 "X-Axis:" = "X-Achse:";
 "Y-Axis:" = "Y-Achse:";
